@@ -1,3 +1,12 @@
+2003-07-17  Bruno Haible  <bruno@clisp.org>
+
+	* configure.in: Remove file.
+	* Makefile.in: Remove file.
+
+2003-07-17  Bruno Haible  <bruno@clisp.org>
+
+	* MODULES.html.sh: Put the </BODY> right before </HTML>.
+
 2003-07-16  Jim Meyering  <jim@meyering.net>
 
 	* modules/save-cwd: Depend on xgetcwd.  From Derek Price.
